[package]
name = "bakalarium"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
